--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Κωνσταντίνος Καλλιακούδης - E-commerce Specialist" />
     <meta property="og:description" content="Έμπειρος συντονιστής περιεχομένου e-commerce με ειδίκευση σε φαρμακείο, SEO on-page, ενημερώσεις τιμών/προωθήσεων και διαλειτουργία ERP-CMS. Ηγούμαι ομάδας 3 ατόμων για ταχεία και ακριβή καταχώρηση 20.000+ κωδικών." />
     <meta property="og:url" content="https://konskall.github.io/cv" />
-    <meta property="og:image" content="https://konskall.github.io/cv/cvog.png" />
+    <meta property="og:image" content="https://konskall.github.io/cv/img/cvog.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
@@ -37,7 +37,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Κωνσταντίνος Καλλιακούδης - Product Content Coordinator" />
     <meta name="twitter:description" content="E-commerce Specialist | Team Leader | SEO Expert | Data Analyst" />
-    <meta name="twitter:image" content="https://konskall.github.io/cv/cvog.png" />
+    <meta name="twitter:image" content="https://konskall.github.io/cv/img/cvog.png" />
     <meta name="twitter:image:alt" content="Professional portfolio of Konstantinos Kalliakoudis" />
     <meta name="twitter:creator" content="@your_twitter_handle" />
     <!-- ===================== STANDARD META TAGS ===================== -->
@@ -61,7 +61,7 @@
   "@type": "Person",
   "name": "Κωνσταντίνος Καλλιακούδης",
   "url": "https://konskall.github.io/cv/",
-  "image": "https://konskall.github.io/cv/cvog.png",
+  "image": "https://konskall.github.io/cv/img/cvog.png",
   "description": "Product Content Coordinator & E-commerce Specialist",
   "jobTitle": "Product Content Coordinator",
   "worksFor": {
@@ -127,7 +127,7 @@
                 <div class="hero-visual">
                     <div class="profile-card">
                         <div class="profile-avatar">
-                            <img src="img/profilepic.jpg"alt="Το όνομά μου" class="profile-photo">
+                            <img src="img/https://konskall.github.io/cv/img/profilepic.jpg"alt="Το όνομά μου" class="profile-photo">
                         </div>
                         <div class="contact-info">
                             <div class="contact-item">
