--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="hero-visual">
                     <div class="profile-card">
                         <div class="profile-avatar">
-                            <img src="img/https://konskall.github.io/cv/img/profilepic.jpg"alt="Το όνομά μου" class="profile-photo">
+                            <img src="img/profilepic.jpg"alt="Καλλιακούδης Κωνσταντίνος" class="profile-photo">
                         </div>
                         <div class="contact-info">
                             <div class="contact-item">
