--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+	<link rel="icon" type="image/png" href="https://konskall.github.io/cv/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="https://konskall.github.io/cv/favicon.svg" />
+    <link rel="shortcut icon" href="https://konskall.github.io/cv/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://konskall.github.io/cv/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="KK CV" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="https://konskall.github.io/cv/site.webmanifest" />
 	<meta property="og:type" content="profile" />
     <meta property="og:title" content="Κωνσταντίνος Καλλιακούδης - E-commerce Specialist" />
     <meta property="og:description" content="Έμπειρος συντονιστής περιεχομένου e-commerce με ειδίκευση σε φαρμακείο, SEO on-page, ενημερώσεις τιμών/προωθήσεων και διαλειτουργία ERP-CMS. Ηγούμαι ομάδας 3 ατόμων για ταχεία και ακριβή καταχώρηση 20.000+ κωδικών." />
