--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                         <h3 class="portfolio-title">Alien Invaders - Space War</h3>
                         <p class="portfolio-type">Gaming &amp; Fun</p>
                         <p class="portfolio-description">
-                            Παιχνιδι arcade vintage style διαστημικής μάχης με την εξηγηινη κολεκτίβα Xenophage
+                            Παιχνιδι arcade vintage style διαστημικής μάχης με την εξωγήινη κολεκτίβα Xenophage
                         </p>
                         <a href="https://konskall.github.io/alieninvaders/" target="_blank" class="portfolio-url">
                             <i class="fas fa-external-link-alt"></i>
