--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="hero-visual">
                     <div class="profile-card">
                         <div class="profile-avatar">
-                            <img src="img/profilepic.jpg"alt="Καλλιακούδης Κωνσταντίνος" class="profile-photo">
+                            <img src="img/profilepic.webp"alt="Καλλιακούδης Κωνσταντίνος" class="profile-photo">
                         </div>
                         <div class="contact-info">
                             <div class="contact-item">
