--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                         <i class="fas fa-envelope" style="color: var(--color-primary);"></i>
                         Στείλτε Μήνυμα
                     </h3>
-                    <form id="contactForm" action="https://formspree.io/f/mvgvbwno" method="POST">
+                    <form id="contactForm">
                         <div class="form-group">
                             <label for="name" class="form-label">Όνομα *</label>
                             <input type="text" id="name" name="name" class="form-control" required>
