--- a/index.html
+++ b/index.html
@@ -619,10 +619,23 @@
             <div class="portfolio-grid">
 			    <div class="portfolio-item">
                     <div class="portfolio-content">
+                        <h3 class="portfolio-title">SnapTour - Ai Landmark Recognition & Audio Tours</h3>
+                        <p class="portfolio-type">Tourism &amp; Information</p>
+                        <p class="portfolio-description">
+                            Πρωτοποριακή εφαρμογή AI αναγνώρισης μνημείων με ηχητικές ξεναγήσεις, σημεία ενδιαφέροντος και chat με εικονικό ξεναγό.
+                        </p>
+                        <a href="https://konskall.github.io/snaptour/index.html" target="_blank" class="portfolio-url">
+                            <i class="fas fa-external-link-alt"></i>
+                            www.konskall.github.io/snaptour
+                        </a>
+                    </div>
+                </div>
+			    <div class="portfolio-item">
+                    <div class="portfolio-content">
                         <h3 class="portfolio-title">Delicatessen Store Business Website</h3>
                         <p class="portfolio-type">Business &amp; E-commerce</p>
                         <p class="portfolio-description">
-                            Επαγγελματικό website για παρουσίαση καταστήματος delicatessen με κατάλογο προϊόντων, στοιχεία επικοινωνίας &amp; επαγγελματικές πληροφορίες
+                            Επαγγελματικό website για παρουσίαση καταστήματος delicatessen με κατάλογο προϊόντων, στοιχεία επικοινωνίας &amp; επαγγελματικές πληροφορίες.
                         </p>
                         <a href="http://www.delibykaliakoudis.gr" target="_blank" class="portfolio-url">
                             <i class="fas fa-external-link-alt"></i>
@@ -635,7 +648,7 @@
                         <h3 class="portfolio-title">Traditional Dairy Product Production Business</h3>
                         <p class="portfolio-type">Business &amp; Production</p>
                         <p class="portfolio-description">
-                            Ιστοσελίδα παρουσίασης βιοτεχνίας παραγωγής παραδοσιακών τυροκομικών προϊόντων
+                            Ιστοσελίδα παρουσίασης βιοτεχνίας παραγωγής παραδοσιακών τυροκομικών προϊόντων.
                         </p>
                         <a href="http://www.gerkaliakoudis.gr" target="_blank" class="portfolio-url">
                             <i class="fas fa-external-link-alt"></i>
@@ -648,7 +661,7 @@
                         <h3 class="portfolio-title">Smart PDF Compressor</h3>
                         <p class="portfolio-type">Tools &amp; Utilities</p>
                         <p class="portfolio-description">
-                            Online δωρεάν εφαρμογή για συμπίεση αρχείων PDF αρχείων με δυνατότητα 3 επιλογών συμπίεσης
+                            Online δωρεάν εφαρμογή για συμπίεση αρχείων PDF αρχείων με δυνατότητα 3 επιλογών συμπίεσης.
                         </p>
                         <a href="https://konskall.github.io/smartpdfcompressor/" target="_blank" class="portfolio-url">
                             <i class="fas fa-external-link-alt"></i>
@@ -661,7 +674,7 @@
                         <h3 class="portfolio-title">Incognito Chat App</h3>
                         <p class="portfolio-type">Business &amp; Communication</p>
                         <p class="portfolio-description">
-                            Εφαρμογή για κρυπτογραφημένη συνομιλία σε πραγματικό χρόνο με ιδιωτικά δωμάτια που βασίζονται σε PIN. Κοινοποιήστε ελεύθερα, ανώνυμα
+                            Εφαρμογή για κρυπτογραφημένη συνομιλία σε πραγματικό χρόνο με ιδιωτικά δωμάτια που βασίζονται σε PIN. Κοινοποιήστε ελεύθερα, ανώνυμα.
                         </p>
                         <a href="https://konskall.github.io/incognitochatapp/" target="_blank" class="portfolio-url">
                             <i class="fas fa-external-link-alt"></i>
@@ -674,7 +687,7 @@
                         <h3 class="portfolio-title">Alien Invaders - Space War</h3>
                         <p class="portfolio-type">Gaming &amp; Fun</p>
                         <p class="portfolio-description">
-                            Παιχνίδι arcade vintage style διαστημικής μάχης με την εξωγήινη κολεκτίβα Xenophage
+                            Παιχνίδι arcade vintage style διαστημικής μάχης με την εξωγήινη κολεκτίβα Xenophage.
                         </p>
                         <a href="https://konskall.github.io/alieninvaders/" target="_blank" class="portfolio-url">
                             <i class="fas fa-external-link-alt"></i>
