--- a/index.html
+++ b/index.html
@@ -676,9 +676,9 @@
                         <p class="portfolio-description">
                             Εφαρμογή για κρυπτογραφημένη συνομιλία σε πραγματικό χρόνο με ιδιωτικά δωμάτια που βασίζονται σε PIN. Κοινοποιήστε ελεύθερα, ανώνυμα.
                         </p>
-                        <a href="https://konskall.github.io/incognitochatapp/" target="_blank" class="portfolio-url">
+                        <a href="https://konskall.github.io/incognitochat/" target="_blank" class="portfolio-url">
                             <i class="fas fa-external-link-alt"></i>
-                            www.konskall.github.io/incognitochatapp/
+                            www.konskall.github.io/incognitochat/
                         </a>
                     </div>
                 </div>
